src/test/testFiles/invalid/syntaxErrors/mismatchedInput.manimdsl
let x: Stack = new Weird;